Fixed vertical scrollbar problem

--- a/style.css
+++ b/style.css
@@ -61,4 +61,6 @@ Push in sidebar
     .toggle-menu {
         display: none;
     }
+    .site {
+    	height: auto;
 }
